--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ os:
   - osx
 julia:
   - 0.7
+  - 1.0
   - nightly
 notifications:
   email: false
@@ -26,9 +27,8 @@ matrix:
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
-# script:
-#   - julia -e 'Pkg.clone("https://github.com/mcabbott/GroupSlices.jl"); Pkg.checkout("GroupSlices", "julia07fixes")'
-#   - julia -e 'Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
+script:
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("WeightedArrays")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
