--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ matrix:
 
 ## uncomment the following lines to override the default test script
 script:
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
+  - julia -e 'using Pkg; pkg"build WeightedArrays"; pkg"test WeightedArrays"'
+#   - julia -e 'Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("WeightedArrays")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
