--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
 ## uncomment the following lines to override the default test script
 script:
   - julia -e 'using Pkg; Pkg.clone("https://github.com/mcabbott/GroupSlices.jl.git")'
-  - julia -e 'using Pkg; Pkg.build(); Pkg.test(coverage=true)'
+  - julia -e 'using Pkg; Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
 #   - julia -e 'using Pkg; pkg"build WeightedArrays"; pkg"test WeightedArrays"'
 #   - julia -e 'Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
 after_success:
