--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ matrix:
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
-script:
-  - julia -e 'using Pkg; Pkg.clone("https://github.com/mcabbott/GroupSlices.jl.git")'
-  - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
+# script:
+#   - julia -e 'using Pkg; Pkg.clone("https://github.com/mcabbott/GroupSlices.jl.git")'
+#   - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
 #   - julia -e 'using Pkg; pkg"build WeightedArrays"; pkg"test WeightedArrays"'
 #   - julia -e 'Pkg.clone(pwd()); Pkg.build("WeightedArrays"); Pkg.test("WeightedArrays"; coverage=true)'
 after_success:
