--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "WeightedArrays"
 uuid = "379a43df-f81c-573e-83a6-069eb6c11a71"
 authors = ["Michael Abbott"]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
@@ -16,6 +16,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
+SliceMap = "82cb661a-3f19-5665-9e27-df437c7e54c8"
 Sobol = "ed01d8cd-4d21-5b2a-85b4-cc3bdc58bad4"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
