--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "WeightedArrays"
 uuid = "379a43df-f81c-573e-83a6-069eb6c11a71"
 authors = ["Michael Abbott"]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
@@ -25,6 +25,20 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 julia = "1"
+CatViews ="1"
+Distances = "0.8"
+EllipsisNotation = "0.4"
+JSON = "0.20, 0.21"
+Lazy = "0.13, 0.14, 0.15"
+MultivariateStats = "0.6, 0.7"
+Parameters = "0.10, 0.11, 0.12"
+RecipesBase = "0.6, 0.7, 0.8, 1"
+Requires = "0.5, 1"
+Setfield = "0.3, 0.4, 0.5, 0.6"
+Sobol = "1"
+SpecialFunctions = "0.7, 0.8, 0.9, 0.10"
+StaticArrays = "0.11, 0.12"
+StatsBase = "0.30, 0.31, 0.32, 0.33"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
