--- a/Project.toml
+++ b/Project.toml
@@ -36,6 +36,7 @@ RecipesBase = "0.6, 0.7, 0.8, 1"
 Requires = "0.5, 1"
 Setfield = "0.3, 0.4, 0.5, 0.6"
 Sobol = "1"
+SliceMap = "0.07, 0.0.8, 0.1"
 SpecialFunctions = "0.7, 0.8, 0.9, 0.10"
 StaticArrays = "0.11, 0.12"
 StatsBase = "0.30, 0.31, 0.32, 0.33"
