groupslices is registered now

--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,14 @@
 name = "WeightedArrays"
 uuid = "379a43df-f81c-573e-83a6-069eb6c11a71"
 authors = ["Michael Abbott"]
-version = "0.1.4"
+version = "0.1.5"
 
 [deps]
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 EllipsisNotation = "da5c29d0-fa7d-589e-88eb-ea29b0a81949"
+GroupSlices = "d853e229-7c7c-56e9-b6be-9a1acc5f13d9"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -24,22 +25,23 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-julia = "1"
-CatViews ="1"
+CatViews = "1"
 Distances = "0.8"
 EllipsisNotation = "0.4"
-JSON = "0.20, 0.21"
+GroupSlices = "0.0.3"
+JSON = "0.20, 0.21, 1"
 Lazy = "0.13, 0.14, 0.15"
 MultivariateStats = "0.6, 0.7"
 Parameters = "0.10, 0.11, 0.12"
 RecipesBase = "0.6, 0.7, 0.8, 1"
 Requires = "0.5, 1"
 Setfield = "0.3, 0.4, 0.5, 0.6"
+SliceMap = "0.1, 0.2"
 Sobol = "1"
-SliceMap = "0.0.7, 0.0.8, 0.1"
-SpecialFunctions = "0.7, 0.8, 0.9, 0.10"
+SpecialFunctions = "0.7, 0.8, 0.9, 0.10, 0.11"
 StaticArrays = "0.11, 0.12"
 StatsBase = "0.30, 0.31, 0.32, 0.33"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
