--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,6 @@ Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SliceMap = "82cb661a-3f19-5665-9e27-df437c7e54c8"
 Sobol = "ed01d8cd-4d21-5b2a-85b4-cc3bdc58bad4"
@@ -31,8 +30,7 @@ GroupSlices = "0.0.3"
 JSON = "0.20, 0.21, 1"
 Lazy = "0.13, 0.14, 0.15"
 MultivariateStats = "0.6, 0.7"
-RecipesBase = "0.6, 0.7, 0.8, 1"
-Requires = "0.5, 1"
+RecipesBase = "1"
 Setfield = "0.3, 0.4, 0.5, 0.6"
 SliceMap = "0.1, 0.2"
 Sobol = "1"
