--- a/Project.toml
+++ b/Project.toml
@@ -24,8 +24,8 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CatViews = "1"
-Distances = "0.8, 0.9"
-EllipsisNotation = "0.4"
+Distances = "0.8, 0.9, 0.10"
+EllipsisNotation = "0.4, 1"
 GroupSlices = "0.0.3"
 JSON = "0.20, 0.21, 1"
 Lazy = "0.13, 0.14, 0.15"
