--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "WeightedArrays"
 uuid = "379a43df-f81c-573e-83a6-069eb6c11a71"
 authors = ["Michael Abbott"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 CatViews = "81a5f4ea-a946-549a-aa7e-2a7f63a27d31"
@@ -24,20 +24,20 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CatViews = "1"
-Distances = "0.8, 0.9, 0.10"
-EllipsisNotation = "0.4, 1"
+Distances = "0.10"
+EllipsisNotation = "1"
 GroupSlices = "0.0.3"
-JSON = "0.20, 0.21, 1"
-Lazy = "0.13, 0.14, 0.15"
-MultivariateStats = "0.6, 0.7, 0.8"
+JSON = "0.21"
+Lazy = "0.15"
+MultivariateStats = "0.9"
 RecipesBase = "1"
-Setfield = "0.3, 0.4, 0.5, 0.6, 0.7"
-SliceMap = "0.1, 0.2"
+Setfield = "0.8"
+SliceMap = "0.2"
 Sobol = "1"
-SpecialFunctions = "0.7, 0.8, 0.9, 0.10, 0.11, 1.0"
-StaticArrays = "0.11, 0.12, 1.0"
-StatsBase = "0.30, 0.31, 0.32, 0.33"
-julia = "1.3"
+SpecialFunctions = "1, 2"
+StaticArrays = "1"
+StatsBase = "0.33"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
